SF Primes/src/objects/Site_Product__c.object
<CustomObject>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Site Products</relationshipLabel>
        <relationshipName>Site_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SiteProduct_Ext_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>combination of both Site and Product ID&apos;s</inlineHelpText>
        <label>SiteProduct Ext Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubProjectSite_Name__c</fullName>
        <formula>SubProjectSite__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubProjectSite Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProjectSite__c</fullName>
        <label>SubProjectSite</label>
        <referenceTo>SubProjectSite__c</referenceTo>
        <relationshipLabel>Site Products</relationshipLabel>
        <relationshipName>Site_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Site Products</relationshipLabel>
        <relationshipName>Site_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Product</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>ProdSite ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>